fix: add SHA to download vendor proto files (#139)
* fix: add SHA to download vendor proto files

* Fix hidden at deleted at (#140)

* empty

* fix: rename hidden_at to deleted_at across proto migration (PR #139 follow-up)

* fix: add SHA to download vendor proto files (#141)

---------


---------
