# api/docs/swagger/entity_service.swagger.json
@@ -7,7 +7,8 @@
   },
   "tags": [
     {
-      "name": "EntityService"
+      "name": "EntityService",
+      "description": "---------- Service ----------"
     }
   ],
   "schemes": [
@@ -335,7 +336,7 @@
           "type": "string",
           "format": "int64"
         },
-        "hiddenAt": {
+        "deletedAt": {
           "type": "string",
           "format": "date-time"
         },
